--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -1,4 +1,8 @@
-<h1>Current User: {{ main.currentUser.username }}</h1>
+<div class="col-md-4">
+
+  <h1>{{ main.currentUser.username }}'s Profile</h1>
+
+</div>
 
 <!-- <form class="form" ng-submit="suc.addKitty()">
   <div class="form-group">
