--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -1,4 +1,7 @@
-<div class="col-md-4">
+
+<div id="loginPage" class="col-md-4">
+  <h1>Welcome to UGC!</h1>
+  <p>This is a way for you to make a diffence in the environment on a realistic, daily basis!</p>
   <h1>Login</h1>
   <div ng-show="loginCtrl.error" class="alert alert-danger">{{ loginCtrl.errorMessage }}</div>
   <form class="form" ng-submit="loginCtrl.login()">
@@ -12,6 +15,7 @@
       </div>
       <div>
         <button type="submit" class="btn btn-default" ng-disabled="loginCtrl.disabled">Login</button>
+        <a ui-sref="register"><button class="btn btn-success">Register</button></a>
       </div>
   </form>
 </div>
