fixed col on home

--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,7 +1,8 @@
+<div class="col-md-4">
+  <h1>Welcome to UGC!</h1>
+  <p>This is a way for you to make a diffence in the environment on a realistic, daily basis!</p>
 
-<h1>Welcome to UGC!</h1>
-<p>This is a way for you to make a diffence in the environment on a realistic, daily basis!</p>
-
-<div ng-controller="logoutController as logoutCtrl">
-  <a ng-click='logoutCtrl.logout()' class="btn btn-default">Logout</a>
+  <div ng-controller="logoutController as logoutCtrl">
+    <a ng-click='logoutCtrl.logout()' class="btn btn-default">Logout</a>
+  </div>
 </div>
