--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -1,21 +1,22 @@
 
-<div id="loginPage" class="col-md-4">
-  <h1>Welcome to UGC!</h1>
-  <p>This is a way for you to make a diffence in the environment on a realistic, daily basis!</p>
-  <h1>Login</h1>
-  <div ng-show="loginCtrl.error" class="alert alert-danger">{{ loginCtrl.errorMessage }}</div>
-  <form class="form" ng-submit="loginCtrl.login()">
-    <div class="form-group">
-      <label>Username</label>
-      <input type="text" class="form-control" name="username" ng-model="loginCtrl.loginForm.username" required>
-    </div>
-    <div class="form-group">
-      <label>Password</label>
-        <input type="password" class="form-control" name="password" ng-model="loginCtrl.loginForm.password" required>
+  <div class="col-md-4">
+    <img src="/public/images/UGC-logo.png" height="" width="300" />
+    <h1 class="gold text-center">Welcome to UGC!</h1>
+    <p class="gold text-center">This is a way for you to make a diffence in the environment on a realistic, daily basis!</p>
+    <h1 class="gold">Login</h1>
+    <div ng-show="loginCtrl.error" class="alert alert-danger">{{ loginCtrl.errorMessage }}</div>
+    <form class="form" ng-submit="loginCtrl.login()">
+      <div class="form-group">
+        <label class="gold">Username</label>
+        <input type="text" class="form-control" name="username" ng-model="loginCtrl.loginForm.username" required>
       </div>
-      <div>
-        <button type="submit" class="btn btn-default" ng-disabled="loginCtrl.disabled">Login</button>
-        <a ui-sref="register"><button class="btn btn-success">Register</button></a>
-      </div>
-  </form>
-</div>
+      <div class="form-group">
+        <label class="gold">Password</label>
+          <input type="password" class="form-control" name="password" ng-model="loginCtrl.loginForm.password" required>
+        </div>
+        <div>
+          <button type="submit" class="btn paperBtn" ng-disabled="loginCtrl.disabled">Login</button>
+          <a ui-sref="register"><button class="btn goldBtn">Register</button></a>
+        </div>
+    </form>
+  </div>
